--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,4 +1,7 @@
 <header ng-controller="HeaderCtrl as header">
     <div class="title" ng-class="{true: 'show'}[app.loaded]">{{ header.title }}</div>
-    <div class="search" ng-class="{true: 'show'}[app.loaded]"><i class="fa fa-search"></i></div>
+    <div class="search" ng-class="{true: 'show'}[app.loaded]">
+        <i class="fa fa-search"></i>
+        <input type="text" name="search" id="search" placeholder="Search" />
+    </div>
 </header>
