--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -1,3 +1,7 @@
 <div class="top-filter">
-    <span translate="RUNNER.AVAILABLE.FILTER_START"></span>
+    <span>
+        <i class="fa fa-chevron-right"></i>
+        <span translate="RUNNER.AVAILABLE.FILTER_START"></span>
+    </span>
+    <div class="filter-select" filter-select="sets"></div>
 </div>
